<resources>
    <string name="app_name">Aamalnaa</string>

    <string name="map_api_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>

    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="send">send</string>
    <string name="skip">skip</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit My Information</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">point</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>
    <string name="pass_short">Password to short</string>
    <string name="new_order">New Order</string>

    <string name="subject">Subject</string>
    <string name="message">Message</string>

    <string name="inv_phone">Invalid phone</string>
    <string name="ch_city">Choose city</string>
    <string name="ch_image">Choose image</string>
    <string name="no_notifications_to_display">No notifications to display</string>

    <string name="send_order">Send Order</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_rate">Add Rate</string>
    <string name="offer">Offers</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="accept">Accept</string>
    <string name="select">Select</string>
    <string name="select_language">Select Language</string>
    <string name="filter">filter</string>
    <string name="no_ads_to_display">No ads to display</string>
    <string name="no_conversations_to_display">No conversations to display</string>
    <string name="filter_by">Filter By</string>
    <string name="nearby">NearBy</string>
    <string name="furthest">Furthest</string>
    <string name="pictured">Pictured</string>
    <string name="not_pictured">Not Pictured</string>
    <string name="city">City</string>
    <string name="client_type">Client type</string>
    <string name="normal">Normal</string>
    <string name="golden">Golden</string>
    <string name="favorite">Favorite</string>
    <string name="my_ads">My Ads</string>
    <string name="i_m_a_golden_client">I\'m a golden client</string>
    <string name="my_wallet">My Wallet</string>
    <string name="transfer_accounts">Transfer accounts</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="about_tour">About Tour</string>
    <string name="balance">Current Points Balance</string>
    <string name="add_balance">Add balance To My Wallet</string>
    <string name="app_commission">App Commission</string>
    <string name="app_note">Note that the application commission rate is <font color='#2b8dcd'>1%</font> if done outside the wallet, <font color='#2b8dcd'>2%</font> if it is done inside the wallet and <font color='#2b8dcd'>10%</font> on delivery and storage</string>
    <string name="enter_perc">Enter the price of the transaction to get the percentage of application</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="transfer">Transfer</string>
    <string name="welcome">Welcome</string>
    <string name="subsc">Subscribe now to get many features of the application</string>
    <string name="annual_subsc">The annual subscription is SAR 99 only</string>
    <string name="advantages">Advantages:</string>
    <string name="subscribe_now">Subscribe now</string>
    <string name="member_since">Member since</string>
    <string name="positive_evaluation">Positive evaluation</string>
    <string name="negative_evaluation">Negative evaluation</string>
    <string name="about">About</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="no_comments_to_display">No comments to display</string>
    <string name="infor">Info</string>
    <string name="works">Works</string>
    <string name="clients">Clients</string>
    <string name="comments">Comments</string>
    <string name="add_ads">Add Ads</string>
    <string name="ad_title">Ad title</string>
    <string name="ad_details">Ad details</string>
    <string name="location">Location</string>
    <string name="ads_photos">Ads photos</string>
    <string name="inc_phone_pas">Incorrect phone number or password</string>
    <string name="please_accept_terms">Please Accept Terms And Condition</string>
    <string name="Choose_Catogry">Choose Category</string>
    <string name="price">Price</string>
    <string name="info">MyInfo</string>
    <string name="rated">Rated</string>
    <string name="work">Work</string>
    <string name="ads">Ads</string>
    <string name="news">New</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="min">MIN</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">Hs</string>
    <string name="yesterday">yesterday</string>
    <string name="day">D</string>
    <string name="select_location_on_map">Select Location On Map</string>
    <string name="Choose_Sub_Category">Choose Sub Category</string>
    <string name="select_location">Select Location</string>
    <string name="evaluation">Evaluation</string>
    <string name="retreat">Retreat</string>
    <string name="write_your_comment_here">Write Your Comment Here</string>
    <string name="time_of_ads">Time Of Ads</string>
    <string name="advertiser">Advertiser</string>
    <string name="last_seen">Last seen</string>
    <string name="views">Views</string>
    <string name="address_detials">Address Detials</string>
    <string name="email_the_advertiser">(Call-Send-Images-Location)</string>
    <string name="delete_reporting">Delete Reporting</string>
    <string name="transactions">Transactions</string>
    <string name="profits">Profits</string>
    <string name="the_bouquet">The bouquet</string>
    <string name="advertising_and_promotional_points">Advertising and promotional points</string>
    <string name="_10_ryal">10 ryal</string>
    <string name="_10_points">10 points</string>
    <string name="_30_ryal">30 ryal</string>
    <string name="_35_points">35 Points</string>
    <string name="_50_ryal">50 ryal</string>
    <string name="_60_points">60 Points</string>
    <string name="more_than_60">More Than 60</string>
    <string name="banks">Banks</string>
    <string name="transferred_account_name">Transferred account name</string>
    <string name="transferred_account_number">Transferred account number</string>
    <string name="transfer_amount">Transfer amount</string>
    <string name="image_conversion">Image conversion</string>
    <string name="choose_bank_acount">Choose Bank Acount</string>
    <string name="search">search</string>
    <string name="edit">Edit</string>
    <string name="be_my_customer">Be my customer</string>
    <string name="report">Report</string>
    <string name="treatment">Treatment</string>
    <string name="the_value">the value</string>
    <string name="current_profit">Current profit</string>
    <string name="_30_positive_evaluation">10  evaluation</string>
    <string name="one_point">one point</string>
    <string name="_10_ads">30 Ads</string>
    <string name="_20_acts">20 acts</string>
    <string name="total">Total</string>
    <string name="transformation">Transformation</string>
    <string name="application_mechanism">Application mechanism</string>
    <string name="delete_customer">Delete</string>
    <string name="type_amessage">Type Amessage</string>
    <string name="image">Image</string>
    <string name="be_my_business">Be my business</string>
    <string name="packages">Packages</string>
    <string name="edit_show_info">ُEdit Show My Info</string>
    <string name="rate">rate</string>
    <string name="reasson">Reasson</string>
    <string name="department">Department</string>
    <string name="my_ads2">My Ads</string>
    <string name="you_rate_this_user_before">You Rate This User Before</string>
    <string name="advertising_section">Advertising section</string>
    <string name="work2">Work</string>
    <string name="reser_pass">Reset Password</string>
    <string name="resend">Resend</string>
    <string name="enter_code">Enter Code</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect Code</string>
    <string name="confirm_musr_equal">Confirm Pass Must Equal Pass</string>
    <string name="paypal">PayPal</string>
    <string name="paypal_from_here_you_can_pay_by_paypal">Paypal From here you can pay by Paypal</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="complete_operation">Complete operation</string>
    <string name="phone_not_found">Phone Not Found</string>
    <string name="contact_on_whatsapp_number">Contact on whatsapp number : 00966553160311</string>
    <string name="point">Point = Ryal</string>
    <string name="work4">Work</string>
    <string name="their_ads_to_me">Their ads to me</string>
    <string name="suc2">Your business has been successfully created</string>
    <string name="personal">Personal Info</string>
    <string name="unreport">Un Reported </string>
    <string-array name="models">
        <item>Choose Ads Type</item>
        <item>ِAds</item>
        <item>Advertising</item>
        <item>Advertising and Ads</item>


    </string-array>
</resources>
