<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bg"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/notifications"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/please_sign_in_or_sign_up"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="3"

            >
            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/signup"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>
</layout>
