<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/filter_color"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    android:id="@+id/root"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/filter_card_bg"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:text="@string/filter"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="3"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:text="@string/filter_by"
                />
            <Button
                android:id="@+id/btnNearby"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/nearby"
                android:background="@drawable/un_selected_filter"
                android:textColor="@color/textColor"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                />

            <Button
                android:id="@+id/btnFurthest"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/furthest"
                android:background="@drawable/un_selected_filter"
                android:textColor="@color/textColor"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnWithImage"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/pictured"
                android:background="@drawable/un_selected_filter"
                android:textColor="@color/textColor"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                />

            <Button
                android:id="@+id/btnWithoutImage"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/not_pictured"
                android:background="@drawable/un_selected_filter"
                android:textColor="@color/textColor"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/city"
                />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:background="@drawable/un_selected_filter"

                >
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    app:backgroundTint="@color/colorPrimary"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    >

                </Spinner>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:text="@string/client_type"
                />
            <Button
                android:id="@+id/btnClient"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/normal"
                android:background="@drawable/un_selected_filter"
                android:textColor="@color/textColor"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                />

            <Button
                android:id="@+id/btnGolden"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/golden"
                android:background="@drawable/un_selected_filter"
                android:textColor="@color/textColor"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>