<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <LinearLayout
         android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/notifications"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/please_sign_in_or_sign_up"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="3"

            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/primary_dark"
                app:cardElevation="3dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="3dp"


                >
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>
</layout>
